<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="244dp"
        android:text="@string/buttonPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/star1_1"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star1_2" />

    <ImageView
        android:id="@+id/star1_2"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/star1_3"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star1_1" />

    <TextView
        android:id="@+id/star1desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/textviewstar1desc"
        app:layout_constraintStart_toEndOf="@+id/star1_2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/star2desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:text="@string/textviewstar2desc"
        app:layout_constraintStart_toEndOf="@+id/star1_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/star3desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="196dp"
        android:text="@string/textviewstar3desc"
        app:layout_constraintStart_toEndOf="@+id/star1_3"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
